# bazel-orfs

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  0001-Revert-make-check-if-binaries-are-valid-before-conti.patch  BCR_VERILATOR_WORKAROUNDS.md  BUILD  BUILD-0.patch  BUILD-1.patch  BUILD-2.patch  BUILD-3.patch  BUILD-4.patch  BUILD-5.patch  CLAUDE.md  Dockerfile  EXTERNAL_API.md  LICENSE  MODULE.bazel  Makefile.patch  README.md  TESTING.md  WORKSPACE  alu.v  bazel-bazel-orfs-local  bcr-yosys-migration.md  bsp.py  bump.py  bump.sh  bus-io.tcl  cc.bzl  cell_count.tcl  cheat.sh.tpl  check_mock_area.tcl  chisel.bzl  clean.sh  compute_floorplan_shape.tcl  compute_slack_margin.tcl  config.bzl  config.mk  config_common.mk  (+115 more)
chisel/: BUILD  LifeTests.cpp  MODULE.bazel  README.md  TestBench.cpp  helloworld_synth_test.sh  test.bzl
delivery/: BUILD.bazel  CpuTest.cpp  LLM.md  README.md
delivery/rtl/: CountTo42Cpu.sv
gallery/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  PHILOSOPHY.md  README.md  build_times.yaml  defs.bzl  gallery.bzl  requirements_lock.txt
gallery/.claude/: settings.json
gallery/coralnpu/: BUILD.bazel  README.md  common_cells.BUILD.bazel  constraints-sram.sdc  constraints.sdc  cvfpu.BUILD.bazel  diplomacy.BUILD.bazel  external.BUILD.bazel  fpu_div_sqrt_mvp.BUILD.bazel  placement-tips.tcl  rocket_chip.BUILD.bazel
gallery/cva6/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel  hpdcache.BUILD.bazel
gallery/docs/: adding-projects.md  flow-linter-with-frc.md  frc-ideas.md  mock-status.md
gallery/gemmini/: BUILD.bazel  README.md  external.BUILD.bazel
gallery/gemmini_2x2/: BUILD.bazel  README.md  constraints.sdc
gallery/gemmini_4x4/: BUILD.bazel  README.md
gallery/gemmini_8x8/: BUILD.bazel  README.md
gallery/gemmini_8x8_abutted/: BUILD.bazel  README.md  analyze_route.tcl  constraints.sdc  drc_locations.tcl  macro-placement.tcl  manual_pins.tcl  show_drc.tcl  tile-io-manual.tcl  tile-io.tcl  top-io.tcl  verify_abutment.tcl  verify_tile_pins.tcl
gallery/genben/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel
gallery/ideas/: README.md  animated-slack-explorer.md  auto-gallery-stage.md  claude-augmented-git-flow.md  fast-unit-test-cc-library-extraction.md  immutable-odb-command-journal.md  mock-yosys-openroad.md  per-command-openroad-binaries.md  per-stage-openroad-binaries.md  static-html-gui.md
gallery/lint/: README.md
gallery/megaboom/: BUILD.bazel  cde.BUILD.bazel  constraints-module.sdc  constraints.sdc  diplomacy.BUILD.bazel  external.BUILD.bazel  hardfloat.BUILD.bazel  io-boomtile.tcl  io-sram-bottom.tcl  io-sram.tcl  kept.bzl  rocket-chip.BUILD.bazel  test_hierarchical_synth.sh
gallery/picorv32/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel
gallery/pymtl3/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel  translate_checksum.py
gallery/scripts/: BUILD.bazel  analyze_congestion.tcl  analyze_hierarchy.py  build_time_chart.py  build_times.py  collect_stage_outputs.py  congestion_check.tcl  copy_thumbnail.py  cts_image.tcl  extract_metrics.py  floorplan_image.tcl  gallery_image.tcl  gemmini_build_times.py  gemmini_scaling.py  gen_cpp_from_odb.tcl  grt_image.tcl  module_sizes.py  orfs_hash.py  orfs_metrics.sh  orfs_progress.sh  orfs_reports.sh  place_image.tcl  plot_drc_map.py  plot_route_drc.py  probe_placement.tcl  resize_image.py  route_image.tcl  update_gallery.py  update_readme.py
gallery/serv/: BUILD.bazel  README.md  external.BUILD.bazel
gallery/smoketest/: BUILD.bazel  block.mk  check_computed_arguments.py  config.mk  constraints-sram.sdc  mock_compare_test.py  mock_make_test.sh
gallery/tensor_accelerator/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel  mac_pe-io.tcl  pdn-tpc.tcl  systolic_array-io.tcl  top-pdn.tcl  tpc-io.tcl
gallery/vlsiffra/: BUILD.bazel  README.md  constraints.sdc  external.BUILD.bazel
orfs/: .bazelrc  BUILD.bazel  FRC.md  MODULE.bazel  README.md  openroad-toolchains-llvm-dev-dep.patch
orfs/patches/: 0001-build-add-all-PDKs-and-export-variables.yaml.patch  0001-build-remove-stale-merge_lib.py-preprocessLib.py-fro.patch  0002-build-add-all-PDKs-and-export-variables.yaml.patch  0002-build-add-exports_files-BUILD.bazel-to-all-src-direc.patch  0003-Add-orfs_design-designs-DESIGNS-mock_openroad-mock-o.patch  0003-build-add-exports_files-BUILD.bazel-to-all-src-direc.patch  0003-docs-update-README-with-config.mk-DSL-and-incrementa.patch  0004-Add-config.mk-DSL-parser-with-84-unit-tests.patch  0004-Add-orfs_design-designs-DESIGNS-mock_openroad-mock-o.patch  0004-Add-orfs_design-macro-and-auto-generated-targets-fro.patch  0004-build-remove-hand-written-design-BUILD-files.patch  0005-Add-orfs_design-macro-and-auto-generated-targets-fro.patch  0005-build-fix-config.mk-parser-and-add-missing-BUILD.baz.patch  0006-build-remove-hand-written-design-BUILD-files.patch  0006-build-switch-to-lint-flow-with-local-bazel-orfs-and-.patch  0006-docs-update-README-with-config.mk-DSL-and-incrementa.patch  0007-build-15-18-asap7-designs-pass-lint-flow.patch  0007-build-fix-config.mk-parser-and-add-missing-BUILD.baz.patch  0007-build-remove-hand-written-design-BUILD-files.patch  0008-build-all-18-asap7-designs-pass-lint-flow-163-target.patch  0008-build-fix-config.mk-parser-and-add-missing-BUILD.baz.patch  0008-build-switch-to-lint-flow-with-local-bazel-orfs-and-.patch  0009-build-15-18-asap7-designs-pass-lint-flow.patch  0009-build-add-fakeram-blackbox-stubs-for-swerv_wrapper.patch  0009-build-switch-to-lint-flow-with-local-bazel-orfs-and-.patch  0010-build-15-18-asap7-designs-pass-lint-flow.patch  (+96 more)
sby/: .bazelrc  BUILD  Counter.scala  FormalCounter.v  MODULE.bazel  README.md  maven_install.json  openroad-remove-initrunfiles.patch  openroad-visibility.patch  sby.bzl
toolchains/: BUILD.bazel
toolchains/scala/: BUILD.bazel  Example.scala  (+13 more)
verilog/: BUILD  MODULE.bazel  README.md  generate.bzl  providers.bzl  verilog.bzl
yosys/: BUILD.bazel  MODULE.bazel  extension.bzl  repo.BUILD.bazel  rules.bzl
(+443 files in other folders)
