"""bazel-orfs dependencies"""

module(
    name = "bazel-orfs",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "verilog",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "mock-klayout", version = "0.0.1", dev_dependency = True)
local_path_override(
    module_name = "mock-klayout",
    path = "mock/klayout",
)

bazel_dep(name = "abc", version = "0.64-yosyshq.bcr.1")
bazel_dep(name = "yosys", version = "0.62")

# yosys_share (techlib data files) has package-private visibility in BCR yosys;
# the ORFS flow needs it public so @yosys//:yosys_share is reachable across modules.
single_version_override(
    module_name = "yosys",
    patch_strip = 1,
    patches = [
        "//patches:yosys-visibility.patch",
        "//patches:yosys-hdrs.patch",
    ],
)

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "bdb262792fef3797730e1b8341b946426272dcdc",
    patch_strip = 1,
    # Minimal patches: only what's needed when ORFS is a non-root module.
    # Design-specific patches are only applied in the orfs/ integration workspace.
    patches = [
        "//patches:0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch",
        "//patches:orfs-preserve-tool-exe-env.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

bazel_dep(name = "openroad")
git_override(
    module_name = "openroad",
    commit = "a81f97e1f11c945e9355b7f36126a84aea047fd8",
    init_submodules = True,
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    # Build xcb-util-cursor from source so the Qt xcb platform plugin
    # doesn't depend on the host having libxcb-cursor0 installed.
    # qt-bazel upstream ships it as system_provided = True; we replace
    # that with a static cc_library compiled from xcb-util-cursor 0.1.5.
    patch_cmds = [
        "curl -sL https://xorg.freedesktop.org/archive/individual/lib/xcb-util-cursor-0.1.5.tar.xz | tar xJ --strip-components=1 -C interface_libs/xcb xcb-util-cursor-0.1.5/cursor",
    ],
    patch_strip = 1,
    patches = [
        "//patches:qt-bazel-xcb-cursor-from-source.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "glpk", version = "5.0.bcr.4")

bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_python",
    version = "1.8.5",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bazel-orfs-pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock_3_13.txt",
)
use_repo(pip, "bazel-orfs-pip")

pip_features = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_features.parse(
    hub_name = "bazel-orfs-features-pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_features_lock_3_13.txt",
)
use_repo(pip_features, "bazel-orfs-features-pip")

orfs = use_extension("//:extension.bzl", "orfs_repositories")
orfs.default()
use_repo(orfs, "config")
use_repo(orfs, "gnumake")
use_repo(orfs, "orfs_variable_metadata")
