"""bazel-orfs dependencies"""

module(
    name = "bazel-orfs",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "verilog",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "mock-klayout", version = "0.0.1", dev_dependency = True)
local_path_override(
    module_name = "mock-klayout",
    path = "mock/klayout",
)

bazel_dep(name = "mock-blender", version = "0.0.1", dev_dependency = True)
local_path_override(
    module_name = "mock-blender",
    path = "mock/blender",
)

bazel_dep(name = "abc", version = "0.64-yosyshq.bcr.1")
bazel_dep(name = "yosys", version = "0.64")
bazel_dep(name = "orfs")

# Pinned via archive_override (HTTPS tarball) rather than git_override so
# bzlmod resolution works in environments where git access to ORFS is
# blocked (e.g. inside the maintainers organization).
archive_override(
    module_name = "orfs",
    integrity = "sha256-tuSWIhtb5aXs1U6XinqBV6IStnN04uzWwn+Q014CtHM=",
    patch_strip = 1,
    patches = [
        "//patches:0036-fix-bazel-orfs-bazel_dep-non-dev-for-load-visibility.patch",
        "//patches:0037-orfs-single-writer-1_synth-sdc.patch",
    ],
    strip_prefix = "OpenROAD-flow-scripts-4b3f2663609fd3f6fd8d862729de1ec5967eb4e6",
    urls = ["https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts/archive/4b3f2663609fd3f6fd8d862729de1ec5967eb4e6.tar.gz"],
)

bazel_dep(name = "openroad")
archive_override(
    module_name = "openroad",
    integrity = "sha256-nQIBpccvBFfMuJPQ61QNSL4grgezwFOMEPe65zrT8ko=",
    # GitHub /archive/<sha>.tar.gz tarballs don't carry submodules,
    # so vendor src/sta (OpenSTA) and third-party/abc from their own
    # GitHub auto-archives at the SHAs OpenROAD's .gitmodules pins
    # to.  sha256sum -c verifies each tarball since patch_cmds bytes
    # aren't covered by archive_override's integrity.  Regenerated
    # by bump.py on every commit bump; do not edit by hand.
    patch_cmds = [
        "curl -sSfL --retry 5 --retry-all-errors --retry-delay 5 -o .openroad-submodule-src-sta-3ab3337d1b8f13bd15d80786ec771e1c6388d24a.tar.gz https://github.com/The-OpenROAD-Project/OpenSTA/archive/3ab3337d1b8f13bd15d80786ec771e1c6388d24a.tar.gz && echo '49b6df67dd69f916993374b28ef48590d427099117fdaa79e4f0d46a4fb85934  .openroad-submodule-src-sta-3ab3337d1b8f13bd15d80786ec771e1c6388d24a.tar.gz' | sha256sum -c - && tar xzf .openroad-submodule-src-sta-3ab3337d1b8f13bd15d80786ec771e1c6388d24a.tar.gz --strip-components=1 -C src/sta && rm .openroad-submodule-src-sta-3ab3337d1b8f13bd15d80786ec771e1c6388d24a.tar.gz",
        "curl -sSfL --retry 5 --retry-all-errors --retry-delay 5 -o .openroad-submodule-third-party-abc-d527cfab4ad731b767ea0a2be2021d920d3afece.tar.gz https://github.com/The-OpenROAD-Project/abc/archive/d527cfab4ad731b767ea0a2be2021d920d3afece.tar.gz && echo '0cbf538e60d0303d0e00360d8973aaad7dae198954bed6e34cc31c9a13b3f802  .openroad-submodule-third-party-abc-d527cfab4ad731b767ea0a2be2021d920d3afece.tar.gz' | sha256sum -c - && tar xzf .openroad-submodule-third-party-abc-d527cfab4ad731b767ea0a2be2021d920d3afece.tar.gz --strip-components=1 -C third-party/abc && rm .openroad-submodule-third-party-abc-d527cfab4ad731b767ea0a2be2021d920d3afece.tar.gz",
        "curl -sSfL --retry 5 --retry-all-errors --retry-delay 5 -o .openroad-submodule-third-party-slang-elab-82effc8d9541be69e1ed3ec44759a4449f5d9247.tar.gz https://github.com/povik/yosys-slang/archive/82effc8d9541be69e1ed3ec44759a4449f5d9247.tar.gz && echo 'ea31b4a205ebb1fe5ec3789bcd66f21f4975e73c0901622af667f843b833ff10  .openroad-submodule-third-party-slang-elab-82effc8d9541be69e1ed3ec44759a4449f5d9247.tar.gz' | sha256sum -c - && tar xzf .openroad-submodule-third-party-slang-elab-82effc8d9541be69e1ed3ec44759a4449f5d9247.tar.gz --strip-components=1 -C third-party/slang-elab && rm .openroad-submodule-third-party-slang-elab-82effc8d9541be69e1ed3ec44759a4449f5d9247.tar.gz",
        "sed -i 's|\"@slang\"|\"@sv-lang//:libsvlang\"|' third-party/slang-elab/src/BUILD",
    ],
    strip_prefix = "OpenROAD-e82300449bc71da46a0959fdb67ab6686f7b1240",
    urls = ["https://github.com/The-OpenROAD-Project/OpenROAD/archive/e82300449bc71da46a0959fdb67ab6686f7b1240.tar.gz"],
)

# OpenROAD pins sv-lang 10.0.bcr.2, which is not yet published in BCR.
# Force the resolution to the latest published version until BCR catches up.
single_version_override(
    module_name = "sv-lang",
    version = "10.0.1-20260316-f04e8156",
)

# scip 9.2.3 (pulled transitively by OpenROAD) vendors a tinycthread that
# #defines once_flag/call_once, colliding with glibc 2.41+'s <threads.h> and
# failing to compile.  9.2.3.bcr.1 carries the upstream rename fix
# (scipopt/scip@cc917e07) but isn't on official BCR yet, so it's hosted in the
# fork registry pinned in .bazelrc.  Nothing in the graph requests .bcr.1, so
# force it here.  Drop both once BCR ships scip > 9.2.3.
single_version_override(
    module_name = "scip",
    version = "9.2.3.bcr.1",
)

# sed (transitive: abc -> ncurses -> sed): its vendored gnulib headers shadow
# libc headers (stdio.h, error.h), which hermetic-llvm's explicit libc -isystem
# entries outrank, so 4.9.bcr.3 fails to compile (BCR #7642). 4.9.bcr.5 carries
# the upstream fix (BCR #7915). (The old toolchains_llvm-era memchr patch_cmds
# is gone: it dodged a host glibc 2.41+ _Generic collision that the zero-sysroot
# hermetic-llvm toolchain no longer triggers.)
single_version_override(
    module_name = "sed",
    version = "4.9.bcr.5",
)

# --- hermetic-llvm compatibility (mirrored from OpenROAD's root MODULE.bazel) ---
# The BCR "llvm" toolchain is zero-sysroot: glibc headers arrive as explicit
# -isystem dirs that outrank the vendored gnulib/minizip headers these
# build-time deps ship. OpenROAD applies these fixes as the root module, so
# they don't propagate when we build @openroad as a dependency — every root
# that builds OpenROAD from source must repeat them. Keep in sync on each bump.

# bison (transitive: rules_bison -> bison): gnulib wrapper headers must precede
# libc via -I, not -isystem (BCR #7642). Proposed upstream as 3.8.2.bcr.8.
single_version_override(
    module_name = "bison",
    patch_strip = 1,
    patches = [
        "//patches:0001-gnulib-wrapper-headers-use-I-not-isystem.patch",
    ],
    version = "3.8.2.bcr.7",
)

# boost.icl: exclusive_less_than violates strict weak ordering (boostorg/icl#51);
# under libc++ this leaves phantom intervals after interval_set subtraction
# (#55), misplacing pad fillers. Upstream fix (#54) lands after boost 1.90.
single_version_override(
    module_name = "boost.icl",
    patch_strip = 1,
    patches = [
        "//patches:0001-refactor-interval-lookup-operations-icl-54.patch",
    ],
)

# gawk (transitive: abc -> ncurses -> gawk; yosys -> gawk): same gnulib
# libc-header shadowing as sed (BCR #7642); 5.3.2.bcr.7 has the fix (BCR #7989).
single_version_override(
    module_name = "gawk",
    version = "5.3.2.bcr.7",
)

# m4 (transitive: rules_bison/rules_flex -> m4): same gnulib libc-header
# shadowing under hermetic-llvm (BCR #7642).
single_version_override(
    module_name = "m4",
    version = "1.4.21.bcr.4",
)

# tcl_lang: tclZipfs.c's #include "crypt.h" resolves to glibc's crypt.h under
# hermetic-llvm's explicit -isystem glibc dirs; include the vendored minizip
# header by path instead. Drop when fixed in a tcl_lang BCR release.
single_version_override(
    module_name = "tcl_lang",
    patch_strip = 1,
    patches = [
        "//patches:0001-tclZipfs-include-vendored-minizip-crypt.h-by-path.patch",
    ],
)

# sv-lang pulls in rules_pycross, whose toolchain extension fails on Python
# 3.8 (transitively registered via or-tools -> pybind11_abseil, dropped
# from rules_python 2.0.0's MINOR_MAPPING). pycross.configure_environments
# is root-honored only, so the workaround must live here (mirrored from
# upstream OpenROAD's MODULE.bazel, which can't apply it from non-root).
bazel_dep(name = "rules_pycross", version = "0.8.1")

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_environments(python_versions = ["3.13"])

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    # Build xcb-util-cursor from source so the Qt xcb platform plugin
    # doesn't depend on the host having libxcb-cursor0 installed.
    # qt-bazel upstream ships it as system_provided = True; we replace
    # that with a static cc_library compiled from xcb-util-cursor 0.1.5.
    patch_cmds = [
        # Retry + --fail so transient xorg.freedesktop.org hiccups don't
        # feed a truncated/HTML response into tar (seen in CI as "xz:
        # File format not recognized"). Stage to a file first for a
        # clearer error if extraction fails.
        "curl -sSfL --retry 5 --retry-all-errors --retry-delay 5 -o xcb-util-cursor-0.1.5.tar.xz https://xorg.freedesktop.org/archive/individual/lib/xcb-util-cursor-0.1.5.tar.xz && tar xJf xcb-util-cursor-0.1.5.tar.xz --strip-components=1 -C interface_libs/xcb xcb-util-cursor-0.1.5/cursor && rm xcb-util-cursor-0.1.5.tar.xz",
    ],
    patch_strip = 1,
    patches = [
        "//patches:qt-bazel-xcb-cursor-from-source.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "glpk", version = "5.0.bcr.4")

# Hermetic C++ toolchain for building OpenROAD (and yosys, gnumake) from
# source: the BCR "llvm" module (hermetic-llvm) — the same statically linked,
# zero-sysroot LLVM that OpenROAD itself registers. No host compiler and no
# dynamic libxml2 link, so the old toolchains_llvm + patched LLVM tarball +
# tools/xml-hack libxml2 stub are gone. dev_dependency: only bazel-orfs's own
# from-source tests build OpenROAD; downstream roots register their own (and
# OpenROAD's own registration is likewise dev-only, so it doesn't propagate).
bazel_dep(name = "llvm", version = "0.8.11", dev_dependency = True)

register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = True,
)

# http_archive / http_file repo rules, used below to vendor the Blender +
# model-viewer fixtures for orfs_blender().
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

bazel_dep(
    name = "rules_python",
    version = "1.9.0",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bazel-orfs-pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock_3_13.txt",
)
use_repo(pip, "bazel-orfs-pip")

pip_features = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_features.parse(
    hub_name = "bazel-orfs-features-pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_features_lock_3_13.txt",
)
use_repo(pip_features, "bazel-orfs-features-pip")

orfs = use_extension("//:extension.bzl", "orfs_repositories")
orfs.default()
use_repo(orfs, "config")
use_repo(orfs, "gnumake")
use_repo(orfs, "orfs_variable_metadata")

# Hermetic Blender + BlenderGDS addon for orfs_blender() — 3D viewer of the
# final-stage GDS. Both archives are extracted in-place by http_archive; we
# never install anything on the host (oss-cad-suite style). Linux-x64 only;
# targets that depend on @blender// are tagged "manual" so wildcard builds
# on other platforms don't pull these archives.
http_archive(
    name = "blender",
    build_file = "//tools/blender:BUILD.blender",
    sha256 = "3a64efd1982465395abab4259b4091d5c8c56054c7267e9633e4f702a71ea3f4",
    strip_prefix = "blender-4.2.3-linux-x64",
    url = "https://download.blender.org/release/Blender4.2/blender-4.2.3-linux-x64.tar.xz",
)

http_archive(
    name = "blendergds",
    build_file = "//tools/blendergds:BUILD.blendergds",
    sha256 = "ef2613d87fcd8afd04e61c2a9b00feedfbfd92fc0e5beeebd5a1da2e52efbc18",
    type = "zip",
    url = "https://github.com/aesc-silicon/BlenderGDS/releases/download/v1.0.2/import_gdsii-1.0.2-linux_x64.zip",
)

# Google's <model-viewer> web component — inlined into the static .html
# emitted by orfs_blender()'s _html sub-target so the page is fully
# self-contained (no CDN dependency at view time). Apache 2.0.
http_file(
    name = "model_viewer_js",
    downloaded_file_path = "model-viewer.min.js",
    sha256 = "774edda21e1be2a0934e460ca5943af1fe3f88da130a9f98bd6a9d611576cacf",
    url = "https://unpkg.com/@google/model-viewer@4.0.0/dist/model-viewer.min.js",
)
