load("@bazel-orfs//:openroad.bzl", "orfs_pdk")

exports_files(
    glob([
        "OpenROAD-flow-scripts/**/*.tcl",
        "OpenROAD-flow-scripts/flow/platforms/asap7/work_around_yosys/*.v",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "opengl",
    srcs = glob(["usr/lib/x86_64-linux-gnu/dri/*.so"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "qt_plugins",
    srcs = glob(["usr/lib/x86_64-linux-gnu/qt5/plugins/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gio_modules",
    srcs = glob(["usr/lib/x86_64-linux-gnu/gio/modules/*.so"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ld.so",
    srcs = ["lib64/ld-linux-x86-64.so.2"],
)

filegroup(
    name = "libstdbuf.so",
    srcs = ["usr/libexec/coreutils/libstdbuf.so"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "openroad",
    data = [
        ":ld.so",
        ":qt_plugins",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/openroad"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "sta",
    data = [
        ":ld.so",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/sta"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "yosys",
    data = [
        ":ld.so",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "make",
    data = [
        ":ld.so",
    ],
    srcs = ["usr/bin/make"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "yosys-abc",
    data = [
        ":ld.so",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys-abc"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "klayout",
    data = [
        ":ld.so",
        ":libstdbuf.so",
    ],
    srcs = ["usr/bin/klayout"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tcl8.6",
    srcs = glob(["usr/share/tcltk/tcl8.6/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ruby3.0.0",
    srcs = glob(["usr/lib/ruby/3.0.0/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ruby_dynamic3.0.0",
    srcs = glob(["usr/lib/x86_64-linux-gnu/ruby/3.0.0/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "makefile",
    srcs = ["OpenROAD-flow-scripts/flow/Makefile"],
    data = glob([
        "OpenROAD-flow-scripts/flow/util/utils.mk",
        "OpenROAD-flow-scripts/flow/util/*.pl",
        "OpenROAD-flow-scripts/flow/util/*.py",
        "OpenROAD-flow-scripts/flow/util/*.sh",
        "OpenROAD-flow-scripts/flow/scripts/*.py",
        "OpenROAD-flow-scripts/flow/scripts/*.script",
        "OpenROAD-flow-scripts/flow/scripts/*.sh",
        "OpenROAD-flow-scripts/flow/scripts/*.tcl",
    ]),
    visibility = ["//visibility:public"],
)

orfs_pdk(
    name = "asap7",
    srcs = glob([
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.gds",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.lib.gz",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.lef",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.lib",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.lyt",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.mk",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.rules",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.sdc",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.tcl",
        "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.v",
        "OpenROAD-flow-scripts/flow/platforms/common/**/*.v",
    ]),
    visibility = ["//visibility:public"],
)
