"""BUILD file for the docker ORFS image, providing PDK and flow targets."""

load("@bazel-orfs//:openroad.bzl", "orfs_pdk")

exports_files(
    glob(
        [
            "OpenROAD-flow-scripts/**/*.tcl",
            "OpenROAD-flow-scripts/flow/platforms/asap7/**/*.v",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "opengl",
    srcs = glob(["usr/lib/x86_64-linux-gnu/dri/*.so"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "qt_plugins",
    srcs = glob(["usr/lib/x86_64-linux-gnu/qt5/plugins/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ld.so",
    srcs = ["_lib/ld-linux-x86-64.so.2"],
)

filegroup(
    name = "lib",
    srcs = glob([
        "lib/x86_64-linux-gnu/**/*.so*",
        "usr/lib/x86_64-linux-gnu/*.so*",
    ]),
)

filegroup(
    name = "libexec",
    srcs = glob(["libexec/**"]),
)

filegroup(
    name = "openroad",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
        ":qt_plugins",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/openroad"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "sta",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/sta"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "yosys_share",
    srcs = glob(["share/yosys/**"]),
)

filegroup(
    name = "yosys",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
        ":yosys_share",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "make",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
    ],
    srcs = ["usr/bin/make"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "yosys-abc",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
    ],
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys-abc"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "klayout",
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
    ],
    srcs = ["usr/bin/klayout"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tcl8.6",
    srcs = glob(["usr/share/tcltk/tcl8.6/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ruby3.0.0",
    srcs = glob(["usr/lib/ruby/3.0.0/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ruby_dynamic3.0.0",
    srcs = glob(["usr/lib/x86_64-linux-gnu/ruby/3.0.0/**"]),
    visibility = ["//visibility:public"],
)

MAKEFILE_SHARED = [
    "OpenROAD-flow-scripts/flow/util/utils.mk",
    "OpenROAD-flow-scripts/flow/util/*.py",
    "OpenROAD-flow-scripts/flow/util/*.sh",
    "OpenROAD-flow-scripts/flow/scripts/*.py",
    "OpenROAD-flow-scripts/flow/scripts/*.sh",
    "OpenROAD-flow-scripts/flow/scripts/*.yaml",
    "OpenROAD-flow-scripts/flow/scripts/*.mk",
]

# Narrowly define yosys dependencies to avoid hours of resynthesis
# upon upgrading ORFS since yosys hardly ever changes
filegroup(
    name = "makefile_yosys",
    srcs = ["OpenROAD-flow-scripts/flow/Makefile"],
    data = glob(
        MAKEFILE_SHARED +
        [
            "OpenROAD-flow-scripts/flow/scripts/*.script",
            "OpenROAD-flow-scripts/flow/scripts/util.tcl",
            "OpenROAD-flow-scripts/flow/scripts/synth*.tcl",
            "OpenROAD-flow-scripts/flow/scripts/**/*.v",
            "OpenROAD-flow-scripts/flow/platforms/common/**/*.v",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "makefile",
    srcs = ["OpenROAD-flow-scripts/flow/Makefile"],
    data = glob(
        MAKEFILE_SHARED +
        [
            "OpenROAD-flow-scripts/flow/scripts/*.tcl",
            "OpenROAD-flow-scripts/flow/platforms/common/**/*.v",
        ],
    ),
    visibility = ["//visibility:public"],
)

[
    orfs_pdk(
        name = pdk,
        config = ":OpenROAD-flow-scripts/flow/platforms/{pdk}/config.mk".format(pdk = pdk),
        srcs = glob(
            [
                "OpenROAD-flow-scripts/flow/platforms/{pdk}/**/*.{ext}".format(
                    pdk = pdk,
                    ext = ext,
                )
                for ext in [
                               "gds",
                               "lef",
                               "lyp",
                               "lyt",
                               "mk",
                               "rules",
                               "tcl",
                               "v",
                           ] +
                           {
                               "asap7": ["cfg", "json", "sdc"],
                               "gf180": ["cfg", "layermap", "lyt_generic"],
                               "ihp-sg13g2": ["json"],
                               "nangate45": ["cfg"],
                               "sky130hd": ["json", "tlef"],
                               "sky130hs": ["json", "tlef"],
                           }.get(pdk, [])
            ] +
            ["OpenROAD-flow-scripts/flow/platforms/common/**/*.v"],
        ),
        libs = glob(
            [
                "OpenROAD-flow-scripts/flow/platforms/{pdk}/**/*.{ext}".format(
                    pdk = pdk,
                    ext = ext,
                )
                for ext in {
                    "asap7": ["lib", "lib.gz"],
                    "gf180": ["lib.gz"],
                }.get(pdk, ["lib"])
            ],
        ),
        visibility = ["//visibility:public"],
    )
    for pdk in [
        "asap7",
        "gf180",
        "nangate45",
        "sky130hd",
        "sky130hs",
        "ihp-sg13g2",
    ]
]
