"""BUILD file for extracting the OpenROAD binary from an ORFS Docker image.

Provides the openroad and sta binaries with their runtime dependencies
(shared libraries, ld-linux wrapper, Qt plugins for GUI).  PDK, Makefile,
and yosys targets are intentionally omitted — those come from their
respective Bazel modules.
"""

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ld.so",
    srcs = ["_lib/ld-linux-x86-64.so.2"],
)

filegroup(
    name = "lib",
    srcs = glob(
        [
            "lib/x86_64-linux-gnu/**/*.so*",
            "opt/or-tools/lib/*.so*",
            "usr/lib/x86_64-linux-gnu/*.so*",
            "OpenROAD-flow-scripts/tools/install/*/lib/*.so*",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "libexec",
    srcs = glob(
        ["libexec/**"],
        allow_empty = True,
    ),
)

filegroup(
    name = "opengl",
    srcs = glob(
        ["usr/lib/x86_64-linux-gnu/dri/*.so"],
        allow_empty = True,
    ),
)

filegroup(
    name = "qt_plugins",
    srcs = glob(
        ["usr/lib/x86_64-linux-gnu/qt5/plugins/**"],
        allow_empty = True,
    ),
)

filegroup(
    name = "tcl8.6",
    srcs = glob(
        ["usr/share/tcltk/tcl8.6/**"],
        allow_empty = True,
    ),
)

filegroup(
    name = "tclreadline",
    srcs = glob(
        ["usr/lib/tcltk/x86_64-linux-gnu/tclreadline*/**"],
        allow_empty = True,
    ),
)

filegroup(
    name = "openroad",
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/openroad"],
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
        ":opengl",
        ":qt_plugins",
        ":tcl8.6",
        ":tclreadline",
    ],
)

filegroup(
    name = "sta",
    srcs = ["OpenROAD-flow-scripts/tools/install/OpenROAD/bin/sta"],
    data = [
        ":ld.so",
        ":lib",
        ":libexec",
    ],
)
