"""BUILD file for extracting yosys + plugins from an ORFS Docker image.

Complements docker_openroad.BUILD.bazel: that file extracts only the
OpenROAD binary and its runtime dependencies, while this one extracts
yosys, yosys-abc, and the yosys share tree (including plugins/slang.so
for native SystemVerilog parsing).

This repo is materialized lazily — downloaded only when a target under
@docker_orfs_yosys_image is built, or via the @bazel-orfs//:yosys-latest
alias. Downstream projects that don't need image-sourced yosys pay
nothing.
"""

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ld.so",
    srcs = ["_lib/ld-linux-x86-64.so.2"],
)

filegroup(
    name = "lib",
    srcs = glob(
        [
            "lib/x86_64-linux-gnu/**/*.so*",
            "usr/lib/x86_64-linux-gnu/*.so*",
            "OpenROAD-flow-scripts/tools/install/yosys/lib/*.so*",
        ],
        allow_empty = True,
    ),
)

# All files under share/yosys: techlib cells, plugin .so files
# (including slang.so), scripts, and cell mappings.
filegroup(
    name = "yosys_share",
    srcs = glob(["OpenROAD-flow-scripts/tools/install/yosys/share/yosys/**"]),
)

filegroup(
    name = "yosys",
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys"],
    data = [
        ":ld.so",
        ":lib",
        ":yosys_share",
    ],
)

filegroup(
    name = "yosys-abc",
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys-abc"],
    data = [
        ":ld.so",
        ":lib",
    ],
)
